--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ nav.navbar-floating {
   top: 0;
   left: 0;
   right: 0;
-  z-50;
+  z-index: 50; /* Agrega la propiedad z-index directamente */
   background-color: rgba(255, 255, 255, 0.95); /* Fondo blanco con ligera transparencia */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); /* Sombra suave */
   padding: 0.5rem 1rem;
