--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,18 @@ body {
   background-attachment: fixed;
 }
 
+.max-w-xl.mx-auto.bg-white.rounded-xl.p-6.shadow-lg.text-center.space-y-4 {
+  background-color: rgba(255, 255, 255, 0.9); /* Reduce ligeramente la transparencia si es necesario */
+}
+
+.text-center > h1 {
+  margin-bottom: 0.25rem; /* Agrega un poco de espacio entre el correo y el nombre */
+}
+
+.text-center > p {
+  color: rgba(51, 51, 51, 0.8); /* Hace el correo un poco menos transparente */
+}
+
 /* Separadores en formularios */
 form > label {
   margin-top: 1rem;
